--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -2,4 +2,6 @@
   <li><a href="{{ root_url }}/">Blog</a></li>
   <li><a href="{{ root_url }}/blog/archives">Archives</a></li>
   <li><a href="{{ root_url }}/justdoit">Just Do It</a></li>
+  <li><a href="{{ root_url }}/slot0">Things</a></li>
+  <li><a href="{{ root_url }}/github">Github</a></li>
 </ul>
