--- a/sass/custom/_fonts.scss
+++ b/sass/custom/_fonts.scss
@@ -8,3 +8,7 @@
 //$heading-font-family: "Verdana", sans-serif;
 //$header-title-font-family: "Futura", sans-serif;
 //$header-subtitle-font-family: "Futura", sans-serif;
+
+$heading-font-family: "PT Sans", "Helvetica Neue", Arial, sans-serif !default;
+$header-title-font-family: "PT Sans", "Helvetica Neue", Arial, sans-serif !default;
+$header-subtitle-font-family: "PT Sans", "Helvetica Neue", Arial, sans-serif !default;
