--- a/sass/custom/_colors.scss
+++ b/sass/custom/_colors.scss
@@ -29,10 +29,10 @@ $link-color-visited: #606060;
 
 /* To use the light Solarized highlighting theme uncomment the following line */
 //$solarized: light;
-$solarized: light;
+//$solarized: light;
 
 /* If you want to tweak the Solarized colors you can do that here */
-//$base03:          #002b36; //darkest blue
+$base03:          #002b36; //darkest blue
 //$base02:          #073642; //dark blue
 //$base01:          #586e75; //darkest gray
 //$base00:          #657b83; //dark gray
@@ -51,6 +51,6 @@ $solarized: light;
 
 
 /* Non highlighted code colors */
-//$pre-bg: $base03;
+$pre-bg: $base03;
 //$pre-border: darken($base02, 5);
 //$pre-color: $base1;
