--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -27,3 +27,79 @@ pre {
    font-size: 11px;
 }
 }
+
+div#resume {
+	//font: 16px Helvetica, Sans-Serif; line-height: 24px; 
+	background: url(images/noise.jpg); 
+	.clear { clear: both; }
+	#pic { 
+		float: right; 
+		margin: -30px 0 0 0; }
+	h1 { margin: 0 0 16px 0; 
+		 padding: 0 0 16px 0; 
+		 font-size: 42px; 
+		 font-weight: bold; 
+		 letter-spacing: -2px; 
+		 border-bottom: 1px solid #999; }
+	h2 { font-size: 20px; 
+		 margin: 0 0 6px 0; 
+		 position: relative; }
+	h2 span { 
+		position: absolute; 
+		bottom: 0; 
+		right: 0; 
+		font-style: italic; 
+		font-family: Georgia, Serif; 
+		font-size: 16px; 
+		color: #999; 
+		font-weight: normal; }
+	span.year {
+	    font-style: italic; 
+		margin-right: 3px;
+		background-color: #E7E7E7;
+	    border-bottom: 1px solid #979797;
+	    border-right: 1px solid #979797;
+    	border-radius: 3px 3px 3px 3px;
+	    color: #6F6F6F;
+	    font-size: 90%;
+	    line-height: 2.4;
+	    margin: 2px 2px 2px 0;
+	    padding: 3px 4px;
+	    text-decoration: none;
+	    white-space: nowrap;
+	  	}
+	 span.years {
+	    background-color: #C04848;
+	    border-radius: 2px 2px 2px 2px;
+	    color: #FFFFFF !important;
+	    display: inline-block;
+	    font-size: 11px;
+	    font-weight: bold;
+	    line-height: 14px;
+	    margin-right: 5px;
+	    padding: 0 4px;
+	
+	 }
+	 span.o {
+		background-color: #B7B7B7;
+		}		
+	p { margin: 0 0 16px 0; }
+	a { color: #999; text-decoration: none; border-bottom: 1px dotted #999; }
+	a:hover { border-bottom-style: solid; color: black; }
+	ul { margin: 0 0 32px 17px; }
+	#objective { width: 500px; float: left; }
+	#objective p { font-family: Georgia, Serif; font-style: italic; color: #666; }
+	dt { 
+		font-style: italic; 
+		font-weight: bold; 
+		font-size: 18px; 
+		text-align: right; 
+		padding: 0 26px 0 0; 
+		width: 100px; 
+		float: left; 
+		height: 100px; 				
+		border-right: 1px solid #999;  
+    }
+	dd { width: 600px; float: left; margin-left: 15px; }
+	dd.clear { float: none; margin: 0; height: 15px; }
+}
