--- a/source/_includes/custom/head.html
+++ b/source/_includes/custom/head.html
@@ -7,3 +7,17 @@ google.load("feeds", "1");
 //google.load("jquery", "1.5.1");  
 //google.load("maps", "2");
 </script>
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-28591959-1']);
+  _gaq.push(['_setDomainName', 'ideseg.com']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
