--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -22,14 +22,49 @@ pre {
 
 
 .highlight, html .gist .gist-file .gist-syntax .gist-highlight {
-.line-numbers {
-   text-align: right;
-   font-size: 11px;
+	.line-numbers {
+   		text-align: right;
+   		font-size: 11px;
+	}
 }
+
+article header p.meta {
+    position: relative;
+	time {
+    	//color: #DFDFDF;
+		background-color: #EEE;
+		padding-left: 8px;
+		padding-right: 8px;
+	    color: #4B4B4B;
+	    text-shadow: 0 1px #FFFFFF;
+		font-weight: bold;
+	}
+	a {
+		text-transform: lowercase;
+		float: right;
+		position: absolute
+	}
 }
+
 
 div#resume {
 	.clear { clear: both; }
+	#contact-info {
+		img { 
+			border: 0px; 
+			box-shadow: none;
+			padding-right: 3px;
+			padding-top: 2px;
+		}
+		span.links {
+			float: right;
+			font-size: 0.8em;
+			a {
+				border: none;
+				font-weight: bold;
+			}
+		}
+	}
 	#resume-pic { 
 		float: right; 
 		margin: -30px 0 0 0; }
